src/test/ui/coherence/coherence-projection-ok-orphan.stderr
error: compilation successful
  --> $DIR/coherence-projection-ok-orphan.rs:29:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

